fixed bug with displaying of search results on mobile

--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -13,6 +13,10 @@
   padding-top: 6px;
 }
 
+.search-results-list {
+  margin: 0 -24px;
+}
+
 .movie-details {
   margin: auto;
   position: relative;
